# AI_cat_assistant

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  implementation_plan.md  main.py  pyproject.toml  tasks.md
src/: main.py
src/models/: course.py
src/services/: calendar_service.py  gemini_service.py  line_service.py  notion_service.py  quiz_service.py  study_service.py
src/utils/: config.py  deduplicator.py  exam_dates.py  info_cache.py  input_validator.py  limiter.py  user_limiter.py
